force-app/main/default/objects/FIN_InvoiceLine__c/FIN_InvoiceLine__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <label>Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>