force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_AccountNum__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccountNum__c</fullName>
    <label>Account #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>