force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_AccumulationRate__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccumulationRate__c</fullName>
    <label>Accumulation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>