force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_AccumulatorType__c.field-meta.xml
<CustomField>
    <fullName>FIN_AccumulatorType__c</fullName>
    <label>Accumulator Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ByAmount</fullName>
                <label>By Amount</label>
            </value>
            <value>
                <fullName>ByQuantity</fullName>
                <label>By Quantity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>