force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Amount__c.field-meta.xml
<CustomField>
    <fullName>FIN_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>