force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_AmountAddendum__c.field-meta.xml
<CustomField>
    <fullName>FIN_AmountAddendum__c</fullName>
    <label>Amount Addendum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>