force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_AXSProduct__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXSProduct__c</fullName>
    <formula>TEXT(FIN_ContractedProduct__r.FIN_ComponentOf__r.FIN_AXSProduct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AXS Product</label>
    <type>Text</type>
</CustomField>