force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FIN_BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <length>25</length>
    <type>Text</type>
</CustomField>