force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Client__c.field-meta.xml
<CustomField>
    <fullName>FIN_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Lines (Client)</relationshipLabel>
    <relationshipName>Invoice_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>