force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_CofADesc__c.field-meta.xml
<CustomField>
    <fullName>FIN_CofADesc__c</fullName>
    <label>C of A Desc</label>
    <length>250</length>
    <type>Text</type>
</CustomField>