force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_ContextID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextID__c</fullName>
    <formula>FIN_ContractedProduct__r.SBQQ__Contract__r.FIN_Context__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context ID</label>
    <type>Text</type>
</CustomField>