force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_ContextName__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContextName__c</fullName>
    <formula>FIN_ContractedProduct__r.SBQQ__Contract__r.FIN_Context__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Context Name</label>
    <type>Text</type>
</CustomField>