force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_CustomerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>FIN_CustomerAccountNumber__c</fullName>
    <formula>FIN_Client__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Number</label>
    <type>Text</type>
</CustomField>