force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Entity__c.field-meta.xml
<CustomField>
    <fullName>FIN_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>