force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_EventBuildDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventBuildDate__c</fullName>
    <formula>FIN_EventLookup__r.FIN_BuildDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Build Date</label>
    <type>Date</type>
</CustomField>