force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_EventEndDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventEndDate__c</fullName>
    <formula>FIN_EventLookup__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>