force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_EventLookup__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventLookup__c</fullName>
    <label>Event Lookup</label>
    <length>100</length>
    <type>Text</type>
</CustomField>