force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_EventStartDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventStartDate__c</fullName>
    <formula>FIN_EventLookup__r.StartDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>