force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_EventZoneGLCode__c.field-meta.xml
<CustomField>
    <fullName>FIN_EventZoneGLCode__c</fullName>
    <label>Event Zone GL Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>