force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_FeeComponent__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponent__c</fullName>
    <label>Fee Component</label>
    <length>250</length>
    <type>Text</type>
</CustomField>