force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_FeeComponentID__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponentID__c</fullName>
    <label>Fee Component ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>