force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_FeeComponentRCC__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponentRCC__c</fullName>
    <label>Fee Component Revenue Center Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>