force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_FeeComponentRCN__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponentRCN__c</fullName>
    <label>Fee Component Revenue Center Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>