force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_FeeComponentRCRA__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponentRCRA__c</fullName>
    <label>Fee Comp Revenue Center Remittance Accnt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>