force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_FeeID__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeID__c</fullName>
    <label>Fee ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>