force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_GrossAmt__c.field-meta.xml
<CustomField>
    <fullName>FIN_GrossAmt__c</fullName>
    <label>Gross Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>