force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_InvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceAmount__c</fullName>
    <formula>FIN_AmountAddendum__c * FIN_InvoiceRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>