force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_InvoiceRate__c.field-meta.xml
<CustomField>
    <fullName>FIN_InvoiceRate__c</fullName>
    <label>Invoice Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>