force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FIN_Outlet__c</fullName>
    <label>Outlet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>