force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Owner__c.field-meta.xml
<CustomField>
    <fullName>FIN_Owner__c</fullName>
    <formula>FIN_ContractedProduct__r.SBQQ__Contract__r.SBQQ__Order__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>