force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_ParentInvoiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>FIN_ParentInvoiceSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Invoice Schedule</label>
    <referenceTo>FIN_InvoiceSchedule__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>