force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_PriceCodeType__c.field-meta.xml
<CustomField>
    <fullName>FIN_PriceCodeType__c</fullName>
    <label>Price Code Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>