force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Subledger__c.field-meta.xml
<CustomField>
    <fullName>FIN_Subledger__c</fullName>
    <label>Subledger</label>
    <length>100</length>
    <type>Text</type>
</CustomField>