force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_SubledgerIC__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubledgerIC__c</fullName>
    <label>Subledger IC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>