force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_SubType__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubType__c</fullName>
    <label>Sub Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>