force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_SubTypeIC__c.field-meta.xml
<CustomField>
    <fullName>FIN_SubTypeIC__c</fullName>
    <label>Sub Type IC</label>
    <length>1</length>
    <type>Text</type>
</CustomField>