force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_Unique__c.field-meta.xml
<CustomField>
    <fullName>FIN_Unique__c</fullName>
    <label>Unique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CofASubledger</fullName>
                <label>C of A + Subledger</label>
            </value>
            <value>
                <fullName>BusinessUnit</fullName>
                <label>Business Unit</label>
            </value>
            <value>
                <fullName>AccountSubledger</fullName>
                <label>Account# + Subledger</label>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>