force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_UnitCost__c.field-meta.xml
<CustomField>
    <fullName>FIN_UnitCost__c</fullName>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>