force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_ValueTax_E__c.field-meta.xml
<CustomField>
    <fullName>FIN_ValueTax_E__c</fullName>
    <label>Value - Tax Excluded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>