force-app/main/default/objects/FIN_InvoiceLine__c/fields/FIN_VenueID__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueID__c</fullName>
    <formula>FIN_Venue__r.FIN_VenueID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue ID</label>
    <type>Text</type>
</CustomField>