force-app/main/default/objects/FIN_InvoiceLine__c/listViews/Business_Units.listView-meta.xml
<ListView>
    <fullName>Business_Units</fullName>
    <columns>NAME</columns>
    <columns>FIN_ParentInvoiceSchedule__c</columns>
    <columns>FIN_AccumulatorType__c</columns>
    <columns>FIN_Unique__c</columns>
    <columns>FIN_BusinessUnit__c</columns>
    <columns>FIN_GrossAmt__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Unique__c</field>
        <operation>equals</operation>
        <value>BusinessUnit</value>
    </filters>
    <label>Business Units</label>
</ListView>